devops/k8s/prod/observations/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sos-observations
  labels:
    name: sos-observations
